# column-mapper

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: csv_service.py  mapping_engine.py  repository.py  validation_service.py
app/core/mapping_strategies/: base.py  case_insensitive.py  fuzzy_match.py
app/core/schemas/: user_info.py
app/core/validators/: base.py  exceptions.py  missing_value_columns.py  required_columns.py
app/ui/: index.html  mapper.html
fixtures/: dummy.csv  dummy_with_na.csv
scripts/: seed.py
tests/app/: test_main.py
tests/app/core/: conftest.py  test_csv_service.py  test_mapping_engine.py  test_repository.py  test_validation_service.py
tests/app/core/mapping_strategies/: conftest.py  test_case_insensitive.py  test_fuzzy_match.py
tests/app/core/validators/: test_missing_value_columns.py  test_required_columns.py
